RESOLVED FIXED135541
[WinCairo] Compile error in OpenTypeMathData.cpp.
https://bugs.webkit.org/show_bug.cgi?id=135541
Summary [WinCairo] Compile error in OpenTypeMathData.cpp.
peavo
Reported 2014-08-02 07:28:51 PDT
The SharedBuffer class needs to be defined. Also, the OpenTypeMathData constructor should also be implemented when OPENTYPE_MATH is not enabled.
Attachments
Patch (1.47 KB, patch)
2014-08-02 07:32 PDT, peavo
no flags
peavo
Comment 1 2014-08-02 07:32:47 PDT
Brent Fulgham
Comment 2 2014-08-02 10:44:04 PDT
Comment on attachment 235935 [details] Patch Thank you! R=me.
peavo
Comment 3 2014-08-02 11:37:34 PDT
(In reply to comment #2) > (From update of attachment 235935 [details]) > Thank you! R=me. Thanks :)
Csaba Osztrogonác
Comment 4 2014-08-04 01:23:01 PDT
Just out of curiosity, are you planning to fix the WinCairo buildbot which is broken long time ago - at least a month ago.
WebKit Commit Bot
Comment 5 2014-08-04 01:48:12 PDT
Comment on attachment 235935 [details] Patch Clearing flags on attachment: 235935 Committed r171989: <http://trac.webkit.org/changeset/171989>
WebKit Commit Bot
Comment 6 2014-08-04 01:48:15 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 7 2014-08-04 09:28:27 PDT
(In reply to comment #4) > Just out of curiosity, are you planning to fix the WinCairo > buildbot which is broken long time ago - at least a month ago. Haven't got access to the bot :) I believe it's just a minor issue though, I can see the following error in the build output: rm: cannot remove `/cygdrive/c/Projects/BuildSlave/win-cairo-release/build/Source/WebInspectorUI/WebInspectorUI.vcxproj': Directory not empty
Alex Christensen
Comment 8 2014-08-04 09:40:34 PDT
(In reply to comment #4) > Just out of curiosity, are you planning to fix the WinCairo > buildbot which is broken long time ago - at least a month ago. That is a known problem, and the maintainers said they will fix it. It seems to be a low priority, though. I might set up one I have more control over in about a month. WinCairo is not dead.
Note You need to log in before you can comment on or make changes to this bug.