[WinCairo] Compile error in OpenTypeMathData.cpp. https://bugs.webkit.org/show_bug.cgi?id=135541

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-08-04
Reviewed by Brent Fulgham.

The SharedBuffer class needs to be defined.
Also, the OpenTypeMathData constructor should be implemented when OPENTYPE_MATH is not enabled.

* platform/graphics/opentype/OpenTypeMathData.cpp:

Canonical link: https://commits.webkit.org/153433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171989 268f45cc-cd09-0410-ab3c-d52691b4dbfc